--- a/src/css/partials/loader.css
+++ b/src/css/partials/loader.css
@@ -1,6 +1,6 @@
 .loader-container {
   position: fixed;
-  background: var(--white);
+  background: var(--project-background);
 
   top: 50%;
   left: 50%;
